--- a/boards/shields/charybdis-bt/charybdis_pmw3610.dtsi
+++ b/boards/shields/charybdis-bt/charybdis_pmw3610.dtsi
@@ -11,42 +11,51 @@
 #define INPUT_REL_HWHEEL 0x06           /**< Relative horizontal wheel coordinate */
 #define INPUT_REL_MISC 0x09             /**< Relative misc coordinate */
 
-&pinctrl {
-    spi0_default: spi0_default {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 15)>,
-                <NRF_PSEL(SPIM_MOSI, 0, 16)>,
-                <NRF_PSEL(SPIM_MISO, 0, 14)>;
-        };
-    };
 
-    spi0_sleep: spi0_sleep {
-        group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 15)>,
-                <NRF_PSEL(SPIM_MOSI, 0, 16)>,
-                <NRF_PSEL(SPIM_MISO, 0, 15)>;
-            low-power-enable;
-        };
+&pinctrl {
+  spi0_default: spi0_default {
+    group1 {
+      psels = <NRF_PSEL(SPIM_SCK, 0, 20)>,
+          <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+          <NRF_PSEL(SPIM_MISO, 0, 17)>;
     };
+  };
+
+  spi0_sleep: spi0_sleep {
+    group1 {
+      psels = <NRF_PSEL(SPIM_SCK, 0, 20)>,
+          <NRF_PSEL(SPIM_MOSI, 0, 17)>,
+          <NRF_PSEL(SPIM_MISO, 0, 17)>;
+      low-power-enable;
+    };
+  };
 };
 
 &spi0 {
-    status = "disabled";
-    compatible = "nordic,nrf-spim";
-    pinctrl-0 = <&spi0_default>;
-    pinctrl-1 = <&spi0_sleep>;
-    pinctrl-names = "default", "sleep";
-    cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
+  status = "okay";
+  compatible = "nordic,nrf-spim";
+  pinctrl-0 = <&spi0_default>;
+  pinctrl-1 = <&spi0_sleep>;
+  pinctrl-names = "default", "sleep";
+  cs-gpios = <&gpio0 22 GPIO_ACTIVE_LOW>;
 
-    trackball: trackball@0 {
-        status = "okay";
-        compatible = "pixart,pmw3610";
-        reg = <0>;
-        spi-max-frequency = <2000000>;
-        irq-gpios = <&gpio0 6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-        cpi = <800>;
-        evt-type = <INPUT_EV_REL>;
-        x-input-code = <INPUT_REL_X>;
-        y-input-code = <INPUT_REL_Y>;
-    };
+  trackball: trackball@0 {
+    status = "okay";
+    compatible = "pixart,pmw3610";
+    reg = <0>;
+    spi-max-frequency = <2000000>;
+    irq-gpios = <&gpio0 24 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+
+      /*   optional features   */
+    automouse-layer = <4>;
+    scroll-layers = <6>;
+    snipe-layers = <5>;
+  };
+};
+
+/ {
+  trackball_listener {
+    compatible = "zmk,input-listener";
+    device = <&trackball>;
+  };
 };
