--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -11,3 +11,7 @@ CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=y
 CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=y
 CONFIG_ZMK_STUDIO_TRANSPORT_BLE_PREF_LATENCY=5
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_MOUSE=y
+CONFIG_PMW3610=y
