--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,7 @@ include:
     keymap: qwerty
     format: bt
     artifact-name: charybdis_qwerty_right
-    snippet: studio-rpc-usb-uart
+    snippet: snippet: zmk-usb-logging
 
   # Colemak DH BT
   - board: nice_nano_v2
