--- a/build.yaml
+++ b/build.yaml
@@ -29,7 +29,8 @@ include:
     keymap: qwerty
     format: bt
     artifact-name: charybdis_qwerty_right
-    snippet: snippet: zmk-usb-logging
+    cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+    snippet: studio-rpc-usb-uart
 
   # Colemak DH BT
   - board: nice_nano_v2
