--- a/boards/shields/charybdis-bt/charybdis_pmw3610.dtsi
+++ b/boards/shields/charybdis-bt/charybdis_pmw3610.dtsi
@@ -19,10 +19,10 @@
                 <NRF_PSEL(SPIM_MISO, 0, 16)>;
         };
     };
-xx
+
     spi0_sleep: spi0_sleep {
         group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 15)>,
+            psels = <NRF_PSEL(SPIM_SCK, 0, 8)>,
                 <NRF_PSEL(SPIM_MOSI, 0, 16)>,
                 <NRF_PSEL(SPIM_MISO, 0, 16)>;
             low-power-enable;
@@ -31,7 +31,7 @@ xx
 };
 
 &spi0 {
-    status = "okay";
+    status = "disabled";
     compatible = "nordic,nrf-spim";
     pinctrl-0 = <&spi0_default>;
     pinctrl-1 = <&spi0_sleep>;
@@ -39,7 +39,7 @@ xx
     cs-gpios = <&gpio0 20 GPIO_ACTIVE_LOW>;
 
     trackball: trackball@0 {
-        status = "okay";
+        status = "disabled";
         compatible = "pixart,pmw3610";
         reg = <0>;
         spi-max-frequency = <2000000>;
