--- a/boards/shields/charybdis-bt/charybdis_right.conf
+++ b/boards/shields/charybdis-bt/charybdis_right.conf
@@ -16,3 +16,5 @@ CONFIG_INPUT=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=y
+CONFIG_PMW3610_INVERT_X=y
+CONFIG_PMW3610_INVERT_Y=y
